Bug 89505 - FORMATTING Tab Handling in automatic table of contents
Summary: FORMATTING Tab Handling in automatic table of contents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.2.0 target:5.1.2 target:5.0.6
Keywords:
: 95909 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-20 17:50 UTC by Andrew
Modified: 2024-11-02 16:49 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Source File (117.00 KB, application/msword)
2015-02-20 17:50 UTC, Andrew
Details
Output (correct) LO 4.3.5 (48.25 KB, application/pdf)
2015-02-20 17:50 UTC, Andrew
Details
Output (incorrect) LO 4.4.0.3 (45.78 KB, application/pdf)
2015-02-20 17:51 UTC, Andrew
Details
Output (correct) MSWord 2007 (22.62 KB, application/pdf)
2015-02-20 17:52 UTC, Andrew
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew 2015-02-20 17:50:24 UTC
Created attachment 113549 [details]
Source File

Was working correctly in LO 4.3.5 and earlier.  Works correctly in MSWord 2007.  Broken in LO 4.4.0.3.

I just upgraded from LibreOffice 4.3 to 4.4 and noticed a change in how tabs are handled when I updated the TOC in LO 4.4.

My document was originally created in MSWord 97, then I switched to LibreOffice with its first release. The automatic table of contents has looked correct until LO 4.4.

I’m using the “Heading 1” style with automatic numbering (1. formatting).The style has a hanging indent to separate the number from the heading text. The style also has a right aligned tab stop coincident with the right page margin. The headings look like this:
(number).(Heading Text)(more text)

It’s basically a journal where I date each major heading and align the date to the right margin to make them easier to see.

The TOC is automatically generated from the “Heading 1” style entries.

In MSWord and LO 4.3 and earlier, the TOC would convert the tabs in the headings to spaces, so a TOC entry used to look like this, with the Page number aligned to a tab stop on the right margin:
(number).(Heading Text)(more text)(page number)

After regenerating the TOC in LO 4.4, the TOC each entry now takes two lines and looks like this:
(number).(Heading Text)(more text)
(page number)

So the between (Heading Text) and (more text) used to be converted into a in TOC entries in previous versions. Now the is retained, resulting in (more text) and (page number) are both aligned with the right margin on two separate rows.
Comment 1 Andrew 2015-02-20 17:50:58 UTC
Created attachment 113550 [details]
Output (correct) LO 4.3.5
Comment 2 Andrew 2015-02-20 17:51:26 UTC
Created attachment 113551 [details]
Output (incorrect) LO 4.4.0.3
Comment 3 Andrew 2015-02-20 17:52:05 UTC
Created attachment 113552 [details]
Output (correct) MSWord 2007
Comment 4 A (Andy) 2015-02-22 19:58:42 UTC
Reproducible with LO 4.4.0.3, Win 8.1
Comment 5 Alex Thurgood 2015-11-20 17:04:33 UTC
*** Bug 95909 has been marked as a duplicate of this bug. ***
Comment 6 DonLocke 2015-11-23 10:12:44 UTC
Reproducible with LO 4.4.5 & 5.1.0.0.alpha1 in MacOS X 10.9.5 & MacOS X 10.10.11

The TableOfContent break lines if you use Tab-Stops in Headings.
Comment 7 Antoine POURCHEZ 2016-01-28 13:31:03 UTC
Reproducible with LO 5.1.0.1 in windows 10


*this is an important issue because compromise backward compatibility : can you increase the importance or clarify the document foundation position of this 
behavior. Should we consider as normal now ?*
Comment 8 Commit Notification 2016-02-11 07:24:24 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5152c43109c9a35f30fc9b0f478c1fbaf01a1143

tdf#89505: replace tab character with space in table of contents

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-02-12 08:30:36 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a6c5dfc9470c261f11efa35bcad98ef7ac632aaa&h=libreoffice-5-1

tdf#89505: replace tab character with space in table of contents

It will be available in 5.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2016-02-16 08:25:29 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eeb7c6877d47bfb0a4871734a397be96eac46663&h=libreoffice-5-0

tdf#89505: replace tab character with space in table of contents

It will be available in 5.0.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2016-09-15 22:34:55 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?