tdf#89505: replace tab character with space in table of contents

the ToxWhitespaceStripper now replaces also tab characters so that
they don't break the formatting

Change-Id: If66aaddcbc0f8c65461f53f07ca7031f8f1d11b4
Reviewed-on: https://gerrit.libreoffice.org/22271
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>